2009-03-17 Braden McDaniel  <braden@endoframe.com>

	Rely on an installed GtkGLExt.

	* Makefile.am
	(SUBDIRS): Removed libs.
	* configure.ac: Check for GtkGLExt; emit GTKGL_{CFLAGS,LIBS}
	instead of GTK_{CFLAGS,LIBS}; removed lib/gtkglext from
	AC_CONFIG_SUBDIRS.
	* lib/gtkglext: Removed.
	* src/Makefile.am
	(openvrml_xembed_openvrml_xembed_CXXFLAGS): Replaced GTK_CFLAGS
	and GL_CFLAGS with GTKGL_CFLAGS.
	(openvrml_xembed_openvrml_xembed_LDFLAGS): Replaced GTK_LIBS and
	GL_LIBS with GTKGL_LIBS.
	(openvrml_xembed_openvrml_xembed_LDADD): Removed references to
	GtkGLExt libraries in OpenVRML's build tree; we link with the
	system ones instead via GTKGL_LIBS.

2009-03-17 Braden McDaniel  <braden@endoframe.com>

	Updates for 0.17.12 release.

	* NEWS
	* README
	* ide-projects/Windows/VisualC9_0/OpenVRML/openvrml-gl/openvrml-gl.rc
	* src/Makefile.am
	(LIBOPENVRML_GL_LIBRARY_VERSION): Updated to 7:4:0.

2009-03-16 Braden McDaniel  <braden@endoframe.com>

	* ide-projects/Windows/VisualC9_0/OpenVRML/openvrml/openvrml.vcproj:
	Updated to use FreeType 2.3.9.

2009-03-16 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml-gl/openvrml/gl/viewer.cpp
	(openvrml::gl::viewer::do_set_frustum(float, float, float)):
	Explicitly convert to float to quell a warning from the Microsoft
	compiler.

2009-03-16 Braden McDaniel  <braden@endoframe.com>

	* ide-projects/Windows/VisualC9_0/OpenVRML/openvrml-gl/openvrml-gl.vcproj:
	Define HAVE_GL_GLU_H.

2009-03-15 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml-gl/openvrml/gl/viewer.cpp: Use the conventional
	gl.h/glu.h header paths as a first choice.  Make it up to users
	who don't want these to make them unavailable to the build
	environment.  Most of the time, that will be done by configuring
	--without-x.

2009-03-04 Braden McDaniel  <braden@endoframe.com>

	Moved the parser instances out of browser.cpp along with a lot of
	other code that implied.

	* src/libopenvrml/openvrml/local/component.cpp: Added file.